[tool.poetry]
name = "go_library"
version = "0.1.0"
description = "Enter description of your project here"
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]
license = "MIT"
include = ["README.md", "src/linkml", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.2.16"
oaklib = "^0.1.22"
linkml-solr = "^0.1.2"
linkml-dataops = "^0.1.0"
sparqlfun = "^0.2.1"
linkml = "^1.2.14"

[tool.poetry.dev-dependencies]
linkml = "^1.2.14"
mkdocs-material = "^8.3.4"

[tool.poetry.scripts]
gocam = "go_library.gocam_cli:main"
amigo = "go_library.amigo_solr.amigo_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
