[tool.poetry]
name = "go_library"
version = "0.1.0"
description = "Enter description of your project here"
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]
license = "MIT"
include = ["README.md", "src/linkml", "project"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
linkml-runtime = "^1.3.2"
oaklib = "^0.1.45"
linkml-solr = "^0.1.2"
linkml-dataops = "^0.1.0"
sparqlfun = "^0.2.1"
linkml = "^1.2.14"

[tool.poetry.dev-dependencies]
linkml = "^1.2.14"
mkdocs-material = "^8.3.4"
jupyter = "^1.0.0"
upsetjs-jupyter-widget = "^1.9.0"
pyupset = "^0.1.1"
UpSetPlot = "^0.6.1"

[tool.poetry.scripts]
gocam = "go_library.gocam_cli:main"
amigo = "go_library.amigo_solr.amigo_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
